<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    tools:context="com.example.beni.myapplication.ProfileActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="100dp"
            android:id="@+id/me_image"
            android:layout_height="100dp"
            android:src="@drawable/b"
            android:layout_marginTop="10dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/work"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Softvision"
                android:textSize="20sp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/me_name"
                android:text="Beniamin Dobre"
                android:textStyle="bold"
                android:textSize="25sp"
                android:layout_above="@id/work"/>
        </RelativeLayout>

    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Bio"
        android:textSize="20sp"

        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/bio"
        android:layout_height="wrap_content"
        android:text="@string/bio"
        android:textSize="15dp"
        android:textStyle="italic"
        android:layout_marginLeft="5dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
        android:id="@+id/location_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Location"
        android:textSize="20sp"

        android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/email_text"
            android:layout_below="@id/location_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email"
            android:textSize="20sp"

            android:layout_marginTop="10dp"/>
        <TextView
        android:id="@+id/created_text"
        android:layout_below="@id/email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Created"
        android:textSize="20sp"

        android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/updated_text"
            android:layout_below="@id/created_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Updated"
            android:textSize="20sp"

            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/public_text"
            android:layout_below="@id/updated_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Public Repos"
            android:textSize="20sp"

            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/private_text"
            android:layout_below="@id/public_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Private Repos"
            android:textSize="20sp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reykjavik"
            android:textColor="#87CEEB"
            android:textSize="20sp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/email"
            android:layout_below="@id/location_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/benidobre_gmail_com"
            android:textSize="20sp"
            android:textColor="#87CEEB"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/created"
            android:layout_below="@id/email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mon_jul_14_2015"
            android:textSize="20sp"
            android:textColor="#87CEEB"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/updated"
            android:layout_below="@id/created_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wed_jun_03_2016"
            android:textSize="20sp"
            android:textColor="#87CEEB"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/publi"
            android:layout_below="@id/updated_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_55"
            android:textSize="20sp"
            android:textColor="#87CEEB"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/privat"
            android:layout_alignParentRight="true"
            android:layout_below="@id/public_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2"
            android:textColor="#87CEEB"
            android:textSize="20sp"
            android:layout_marginTop="10dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="View Blog"
            android:id="@+id/view_blog"
            android:layout_alignParentBottom="true"
            android:textSize="20sp"
            android:background="#FFFFFF"
            android:drawableLeft="@drawable/c"
            />
    </RelativeLayout>

</LinearLayout>
